--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "ConnectionStrings": {
   "ConexSqlServer": "Data Source=localhost\\sqlexpress;Initial Catalog=dB;Integrate Security=True",
-    "MySqlConex": "server=localhost;user=root;password=Santilli123;database=farmacia-4;"
+    "MySqlConex": "server=localhost;user=root;password=123456;database=farmacia-four;"
   }
 }
