--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
   "ConexSqlServer": "Data Source=localhost\\sqlexpress;Initial Catalog=dB;Integrate Security=True",
-    "MySqlConex": "server=localhost;user=root;password=Santilli123;database=farmacia-4;"
+    "MySqlConex": "server=localhost;user=root;password=123456;database=farmacia-four;"
   },
   "JWT": {
     "Key": "3x5tWHaX8DLhQZ%n#hpiscBkVm^Ycc4CkaWKQrDLBzNjgySDz2qJuQE&NQPVarGWquUncC^BKUbiS9j4!tVUv#Us",
